# OpenEnv

./: README.md
counterfactual/: __init__.py  compare.py  protocols.py  simulate.py  snapshot.py  tree.py
envs/: conftest.py
envs/chat_env/: __init__.py
envs/chat_env/server/: __init__.py  test_chat_env.py
envs/robot_city_env/: README.md  __init__.py  client.py  demo_client.py  green_agent.py  models.py  openenv.yaml  pyproject.toml
envs/robot_city_env/server/: __init__.py  app.py  robot_city_environment.py
envs/robot_city_env/server/sim/: __init__.py  dynamics.py  failures.py  render.py  scenarios.py
src/openenv/: __init__.py
src/openenv/counterfactual/: __init__.py  logging.py  serialize.py
src/openenv/vision/: README.md  __init__.py  encoding.py  frames.py  protocols.py
tests/: test_counterfactual.py  test_counterfactual_logging.py  test_counterfactual_serialize.py  test_vision.py  test_vision_frames.py
tests/envs/: test_robot_city_env.py  test_textarena_environment.py  test_websearch_environment.py  test_websockets.py
